# dist-evd-solver

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md  README_zh.md  sbatch_test.sh  test.out
src/: log.h  main-mpi.cu  main.cu  matrix_ops.cuh
src/include/: gpu_handle_wrappers.h  log.h  matrix_ops.cuh  matrix_ops_dist.cuh  matrix_ops_mpi.cuh  workflow.cuh
src/include/common/: gpu_handle_wrappers.h  log.h
src/include/matrix_ops/internal/sy2sb/: sy2sb_panelqr.cuh
src/matrix_ops/: matrix_ops_copy.cu  matrix_ops_gemm.cu  matrix_ops_gen.cu  matrix_ops_print.cu  matrix_ops_sb2tr.cu  matrix_ops_sy2sb.cu  matrix_ops_syr2k.cu  matrix_ops_tr2sb.cu  matrix_ops_tsqr.cu
src/matrix_ops/internal/sy2sb/: sy2sb_panelqr.cu  sy2sb_panelqr.cuh
src/matrix_ops/mpi/: matrix_ops_mpi_sb2sy.cu  matrix_ops_mpi_sb2tr.cu  matrix_ops_mpi_sy2sb.cu  matrix_ops_mpi_sy2sb.cu.backup  matrix_ops_mpi_tr2sb.cu
src/workflow/: workflow_sb2sy_mpi.cu  workflow_sb2tr_mpi.cu  workflow_sy2sb.cu  workflow_sy2sb_dist.cu  workflow_sy2sb_mpi.cu  workflow_tr2sb_mpi.cu  workflow_tsqr.cu
tests/: CMakeLists.txt  gpu_handle_wrappers_test.cu  matrix_ops_IminusA_test.cu  matrix_ops_copy_test.cu  matrix_ops_gemm_test.cu  matrix_ops_print_test.cu  matrix_ops_sy2sb_test.cu  matrix_ops_syr2k_test.cu  matrix_ops_tsqr_test.cu  mpi_sb2sy_genq_context_test.cu  sy2sb_WY_construction_test.cu  sy2sb_getIminusQL4panelQR_test.cu
tests/env/: gpu_aware.cu  multi_gpu_cublasxt.cu  nccl_gpu_gemm.cu  single_gpu_sy2sb.cu
